# ubuntu-hibernate-wizard

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/: io.github.ami3go.UbuntuHibernateWizard.desktop  io.github.ami3go.UbuntuHibernateWizard.metainfo.xml  io.github.ami3go.UbuntuHibernateWizard.policy  io.github.example.UbuntuHibernateWizard.desktop  io.github.example.UbuntuHibernateWizard.policy  ubuntu-hibernate-guard-notify.desktop  ubuntu-hibernate-guard.service  ubuntu-hibernate-guard.timer
docs/: architecture.md  diagnostics.md  faq.md  gate-e-vm-validation.md  gate-f-release-candidate.md  github-pages.md  gui-object-names.md  how-hibernation-works.md  index.md  installation.md  legacy-code-audit.md  real-screenshots.md  release-0.4.3-rc1.md  release-0.4.3-rc2.md  release-0.4.3-rc3.md  release-0.4.3-rc4.md  release-0.4.3-rc5.md  release-0.4.3-rc6.md  release-notes-v0.42.md  robots.txt  rollback-and-recovery.md  screenshots-and-examples.md  testing.md  troubleshooting.md  usage.md  v0421-hardening-notes.md  v0425-code-review-cleanup-notes.md  v0426-docs-seo-refresh-notes.md
packaging/: changelog.Debian  conffiles  control.in  launcher  postinst  postrm
scripts/: generate_fake_system_fixtures.py
spec/: ubuntu_hibernate_wizard_task.md
tests/: test_about_project_links.py  test_application_desktop_icon_asset.py  test_apply_finish_ux.py  test_branding_assets.py  test_configuration_gate_allows_managed_swapfile.py  test_core.py  test_diagnostic_zip.py  (+28 more)
(+136 files in other folders)
